--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.48.2",
     "react-intersection-observer": "^9.5.3",
     "react-responsive": "^9.0.2",
+    "sharp": "^0.33.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
