Update frontend URL in AuthController and appsettings files

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -17,5 +17,5 @@
     "EnableSsl": true,
     "SendGridKey": "your-sendgrid-key"
   },
-  "FrontendUrl": "http://localhost:3000"
+  "AppHost": "http://localhost:3000"
 }
