--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL="http://localhost:5037/api"
+NEXT_PUBLIC_API_URL="http://192.168.1.3:5037/api"
+# NEXT_PUBLIC_API_URL="http://localhost:5037/api"
