Update AppHost URL in appsettings.json

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -17,5 +17,5 @@
     "EnableSsl": true,
     "SendGridKey": "your-sendgrid-key"
   },
-  "AppHost": "http://localhost:3000"
+  "AppHost": "http://192.168.1.3:3000"
 }
