--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -17,5 +17,5 @@
     "EnableSsl": true,
     "SendGridKey": "your-sendgrid-key"
   },
-  "AppHost": "http://localhost:3000"
+  "AppHost": "http://192.168.1.3:3000"
 }
