Update frontend URLs in AuthController and Program.cs

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -17,6 +17,5 @@
     "EnableSsl": true,
     "SendGridKey": "your-sendgrid-key"
   },
-  "FrontendHost": "http://192.168.1.3:3000",
-  "AppHost": "http://192.168.1.3"
+  "AppHost": "192.168.1.3"
 }
