--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,5 @@
 # Change the IP address to your local IP address
+# Example: http://xxx.xxx.x:5037/api
+# The x value is your local IP address
+
 NEXT_PUBLIC_API_URL="http://192.168.1.3:5037/api"
