--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /connect-app
 COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
+RUN rm -f env.local
 RUN npm run build
 
 FROM node:18-alpine as runner
