--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       SA_PASSWORD: StrongPassword1!
       ACCEPT_EULA: Y
     ports:
-      - "1433:1433"
+      - "1434:1433"  # Changed port mapping to 1434
     volumes:
       - ./data:/var/opt/mssql/data
       - ./backup:/var/opt/mssql/backup
