--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -12,20 +12,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mssql:
-        image: mcr.microsoft.com/mssql/server:2022-latest
-        env:
-          SA_PASSWORD: StrongPassword1!
-          ACCEPT_EULA: Y
-        ports:
-          - 1433:1433
-        options: >-
-          --health-cmd "exit 0" 
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -54,3 +40,10 @@ jobs:
 
     - name: Run Docker Compose
       run: docker-compose up -d
+
+    - name: Wait for MSSQL to be healthy
+      run: |
+        until [ "$(docker inspect -f '{{json .State.Health.Status}}' sql_server_2022)" == "\"healthy\"" ]; do
+          echo "Waiting for MSSQL to be healthy..."
+          sleep 5
+        done
